fix regression in css where note info wasn't aligned

--- a/src/includes/css/main.css
+++ b/src/includes/css/main.css
@@ -271,3 +271,9 @@ select {
 		font-size: 12px;
 	}
 }
+
+.note .note_id {
+	font-size: 50%;
+	display: block;
+	text-align: right;
+}
